--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:kumerian/petclinic.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/kumerian/petclinic.git</developerConnection>
       <tag>petclinic-0.0.1</tag>
   </scm>
 
