--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>com.croga</groupId>
     <artifactId>petclinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>petclinic</name>
     <description>Pet clinic excercise for Spring Boot</description>
 
@@ -39,7 +39,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/kumerian/petclinic.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:kumerian/petclinic.git</developerConnection>
       <tag>petclinic-0.0.1</tag>
   </scm>
 
