--- a/release.properties
+++ b/release.properties
@@ -1,8 +1,8 @@
 #release configuration
-#Thu May 28 20:45:10 CEST 2020
+#Thu May 28 21:00:32 CEST 2020
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=true
-scm.url=scm\:git\:ssh\://git@github.com/spring-projects/spring-boot.git/petclinic
+scm.url=scm\:git\:git@github.com\:kumerian/petclinic.git
 preparationGoals=clean verify
 projectVersionPolicyId=default
 remoteTagging=true
